plugins {
  id "java"
}

java {
  sourceCompatibility = JavaVersion.VERSION_1_8
  targetCompatibility = JavaVersion.VERSION_1_8
}

repositories  {
  mavenCentral()
}

dependencies {
  implementation "org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0"
  implementation "org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.12.0"
  implementation "org.codehaus.groovy:groovy-eclipse-batch:3.0.8-01"
  implementation "com.google.code.gson:gson:2.8.7"
  implementation "org.apache.bcel:bcel:6.5.0"
}

ext.mainClass = "com.microsoft.gradle.GradleLanguageServer"

task copyJar(type: Copy) {
  from "build/libs/gradle-language-server.jar"
  from configurations.runtimeClasspath
  into "../extension/lib"
}

tasks.build.dependsOn tasks.copyJar
tasks.copyJar.dependsOn jar

jar {
  manifest {
    attributes(
      "Main-Class": "com.microsoft.gradle.GradleLanguageServer",
      "Class-Path": configurations.runtimeClasspath.collect { it.getName() }.join(' ')
    )
  }
}
